# tutorials

./: .gitignore  .gitmodules  10 articles to sharpen your command line skills.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  KODEGEEK.md  MISSING_DATA.md  Packaging_your_software_using_RPM.md  README.md  ReplacementCommands  SECURITY.md  _config.yml  mkdocs.yaml  npb.spec  testAllS  testAllW
PythonDebugger/: README.md  simple_diagram.py
ReplacementCommands/: README.md  mx_list.py
Running-Android-games-on-Linux-with-android-x86/: README.md
docs/: 10-articles-to-sharpen-your-command-line-skills.md  20-single-line-commands-you-would-not-be-able-to-live-without-on-Linux.md  CNAME  DeprecatedCommandsTutorial.md  GettingStartedWithFpm.md  Packaging_your_software_using_RPM.md  README.md  about.md  add_submodules.sh  testAllS  testAllW
docs/Dialog/: README.md  kodegeek_rdp.sh
docs/EmpireStateRunUp/: .gitignore  CHANGELOG.md  README.md  SUMMARY.md  TUTORIAL.md  pyproject.toml  requirements.txt
docs/EmpireStateRunUp/data/: raw_data.txt
docs/EmpireStateRunUp/empirestaterunup/: __init__.py  analyze.py  apps.py  browser.tcss  data.py  data_normalizer.py  empire_state_ascii_art.txt  five_numbers.tcss  outliers.tcss  results-first-level-2023.csv  results-full-level-2023.csv  results.csv  runner_details.tcss  runners.py  scraper.py  scrapper.py  server.py
docs/EmpireStateRunUp/scripts/: data_normalizer.py
docs/EmpireStateRunUp/test/: data.txt  raw_data.csv  test_analyze.py  test_app.py  test_data.py  test_scrapper.py
docs/Enhancing_Your_Python_Workflow_with_UV_on_Fedora/: .gitignore  README.md
docs/Enhancing_Your_Python_Workflow_with_UV_on_Fedora/grocery_stores/: groceries.py  pyproject.toml  test_groceries.py
docs/Enhancing_Your_Python_Workflow_with_UV_on_Fedora/grocery_stores/src/grocery_stores_ct/: groceries.py
docs/Enhancing_Your_Python_Workflow_with_UV_on_Fedora/grocery_stores/test/: test_groceries.py
docs/Mock-RPM/: README.md
docs/MonitoringWithInfluxDB/: README.md
docs/PythonDebugger/: README.md
docs/ReplacementCommands/: README.md
docs/SelfExtractingScripts/: MISSING_DATA.md  README.md  covid_extract.sh
docs/SpyOnNfs/: .gitignore  README.md
docs/SpyOnNfs/scripts/: NfsLayout.py  README.md  test_script.py
docs/Textualize/: .gitignore  README.md  TUTORIAL.md  log_scroller.py  pyproject.toml  requirements.txt  table_with_detail_screen.py
docs/Textualize/KodegeekTextualize.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
docs/Textualize/kodegeek_textualize/: competitors_app.tcss  details_screen.tcss  log_screen.tcss  log_scroller.py  os_app.tcss  table_with_detail_screen.py
docs/Textualize/tests/: test_log_scroller.py  test_table_with_detail_screen.py
