[build-system]
requires = [
    "setuptools >= 40.9.0",
    "wheel",
    "textual-dev"
]
build-backend = "setuptools.build_meta"

[project]
name = "EmpireStateRunUp"
version = "0.0.1"
authors = [
    {name = "Jose Vicente Nunez", email = "kodegeek.com@protonmail.com"},
]
description = "Collection of scripts to analyze the results of the 2023 Empire State Run Up race"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["running", "race"]
classifiers = [
    "Environment :: Console",
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Utilities"
]
dependencies = [
    "pandas==2.1.1",
    "textual==0.41.0",
    "numpy==1.26.0",
    "matplotlib==3.8.0",
    "selenium==4.15.2",
    'importlib-metadata; python_version>"3.8"',
]

[project.scripts]
esru_normalizer = "empirestaterunup.runners:run_normalizer"
esru_numbers = "empirestaterunup.runners:run_5_number"
esru_outlier = "empirestaterunup.runners:run_outlier"
esru_browser = "empirestaterunup.runners:run_browser"
simple_plot = "empirestaterunup.runners:simple_plot"
esru_scrapper = "empirestaterunup.runners:run_scrapper"