[build-system]
requires = [
    "setuptools >= 70.1.0",
    "wheel",
    "build",
    "twine",
    "textual-serve",
    "textual-dev"
]
build-backend = "setuptools.build_meta"

[project]
name = "EmpireStateRunUp"
version = "0.0.9"
authors = [
    {name = "Jose Vicente Nunez", email = "kodegeek.com@protonmail.com"},
]
description = "Collection of scripts to analyze the results of the 2023 Empire State Run Up race"
readme = "README.md"
requires-python = ">=3.9"
keywords = ["running", "race"]
classifiers = [
    "Environment :: Console",
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Utilities"
]
dynamic = ["dependencies"]
[project.scripts]
esru_scraper = "empirestaterunup.runners:run_scraper"
esru_csv_cleaner = "empirestaterunup.runners:run_csv_cleaner"
esru_raw_cleaner = "empirestaterunup.runners:run_raw_cleaner"
esru_numbers = "empirestaterunup.runners:run_5_number"
esru_outlier = "empirestaterunup.runners:run_outlier"
esru_browser = "empirestaterunup.runners:run_browser"
esru_plot = "empirestaterunup.runners:simple_plot"
esru_server = "empirestaterunup.server:main"


[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
exclude = ["test*"]

[tool.setuptools.package-data]
empirestaterunup = ["*.txt", "*.tcss", "*.csv"]
images = ["*.png", "*.svg"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
